--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </script>
               </p>
               <p class="inline-flex items-center gap-1">
-                <span>Sruti Shrivastava</span>
+                <span>Sruti Srivastava</span>
               </p>
             </footer>
             <!-- END Footer -->
